--- a/high_school/templates/high_school/school_overview.html
+++ b/high_school/templates/high_school/school_overview.html
@@ -1,7 +1,7 @@
 {% block school_overview %}
     {% load hs_filters %}
     {% if selected_school %}
-        <div class="top-header" style="background: gray">
+        <div class="top-header bg-secondary">
             <div class="right-pane-container">
                 <h5 class="mb-3" style="font-size: 28px;">{{ selected_school.school_name }}</h5>
                 <h5 class="mb-2">{{ selected_school.neighborhood }}</h5>
