--- a/register/templates/register/base_emails.html
+++ b/register/templates/register/base_emails.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% block content %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/theme.css' %}" rel="stylesheet">
     <div style="width: 100%;">
         <div class="container-fluid" style="text-align: center; padding: 0 !important;">
             <div class="nav-container">
