--- a/static/high_schools/css/high_school.css
+++ b/static/high_schools/css/high_school.css
@@ -101,7 +101,7 @@ body {
     width: 100%;
     height: 36px;
     padding: 15px 20px;
-    color: slategray;
+    /*color: slategray;*/
     border: 2px solid #e4e4e4 !important;
     border-radius: 12px;
 }
@@ -112,7 +112,7 @@ body {
 }
 
 .hs-search-filters .search-div .search-btn {
-    color: slategray;
+    /*color: slategray;*/
     position: absolute;
     left: 92%;
     top: 15%;
@@ -130,7 +130,7 @@ body {
 .filters-div .filter-info-div {
     display: flex;
     flex-direction: row;
-    color: slategray;
+    /*color: slategray;*/
     cursor: pointer;
     padding: 0 10px;
 }
@@ -143,7 +143,7 @@ body {
 
 .filter-action-div .apply-filters,
 .filter-action-div .cancel-filters{
-    color: slategray;
+    /*color: slategray;*/
     cursor: pointer;
     padding: 0 10px;
 }
@@ -153,10 +153,10 @@ body {
     display: none;
     margin-top: 2%;
     font-size: 16px;
-    color: slategray;
+    /*color: slategray;*/
 }
 .filters-div .fav-btn{
-    color: slategray;
+    /*color: slategray;*/
     cursor: pointer;
     padding-left: 10px;
 }
@@ -165,7 +165,7 @@ body {
 }
 .high-school-fav-div{
     font-size: 16px;
-    color: slategray;
+    /*color: slategray;*/
     margin: 2% 0 1% 0;
 }
 .program-div{
@@ -193,11 +193,11 @@ body {
     margin-bottom: 5% !important;
 }
 .page-link {
-    background-color: #008067;
+    /*background-color: #008067;*/
 }
 .page-item.disabled .page-link{
-    background-color: #4f9c8c;
+    /*background-color: #4f9c8c;*/
 }
 .page-item.active .page-link{
-    background-color: #004f40;
+    /*background-color: #004f40;*/
 }
