--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -4,7 +4,12 @@
 <head>
     <!-- Load bootstrap css, jquery, bootstrap js -->
     <!-- common across all applications inheriting from dashboard -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    {% if user_type and user_type == constant_ut_adminStaff %}
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    {% else %}
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/theme.css' %}" rel="stylesheet">
+    {% endif %}
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/popper.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -30,9 +35,10 @@
                 </ul>
 
                 <div class="dropdown">
-                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{request.session.username}}
-                     </button>
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{ request.session.username }}
+                    </button>
                     <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="dropdown03">
                         <button class="dropdown-item">Change Password</button>
                         <a class="dropdown-item" href="{% url 'dashboard:logout' %}">Logout</a>
@@ -50,13 +56,15 @@
                     {# this has to be a user object and not a user_type string  #}
                     <span class="nav-item nav-link p-2 active" id="nav-allSchools-tab"
                           data-toggle="tab"
-                          data-url="{% url 'dashboard:high_school:index'  %}"
+                          data-url="{% url 'dashboard:high_school:index' %}"
                           role="tab" aria-controls="nav-allSchools">All Schools</span>
                     <span class="nav-item nav-link p-2" id="nav-applications-tab"
-                          data-toggle="tab" data-url="{% url 'dashboard:application:all_applications' %}"
+                          data-toggle="tab"
+                          data-url="{% url 'dashboard:application:all_applications' %}"
                           role="tab" aria-controls="nav-applications">Applications</span>
                     <span class="nav-item nav-link p-2" id="nav-apply-tab"
-                          data-toggle="tab" data-url="{% url 'dashboard:application:new_application' %}"
+                          data-toggle="tab"
+                          data-url="{% url 'dashboard:application:new_application' %}"
                           role="tab" aria-controls="nav-apply">Apply</span>
                     <span class="nav-item nav-link p-2" id="nav-recommendations-tab"
                           data-toggle="tab"
@@ -73,13 +81,14 @@
                     {# this has to be a user object and not a user_type string  #}
                     <span class="nav-item nav-link p-2 active" id="nav-student-apps-tab"
                           data-toggle="tab"
-                          data-url="{% url 'dashboard:admissions:index'  %}"
-                          role="tab" aria-controls="nav-student-apps-tab">Student Applications</span>
+                          data-url="{% url 'dashboard:admissions:index' %}"
+                          role="tab"
+                          aria-controls="nav-student-apps-tab">Student Applications</span>
 
-{#                    todo Make this active when School Information tab is implemented#}
-{#                    <span class="nav-item nav-link p-2" id="nav-school-info-tab"#}
-{#                          data-toggle="tab"#}
-{#                          role="tab" aria-controls="nav-school-info-tab">School Information</span>#}
+                    {#                    todo Make this active when School Information tab is implemented#}
+                    {#                    <span class="nav-item nav-link p-2" id="nav-school-info-tab"#}
+                    {#                          data-toggle="tab"#}
+                    {#                          role="tab" aria-controls="nav-school-info-tab">School Information</span>#}
                 </div>
             </nav>
         {% endif %}
