--- a/recommendation/templates/recommendation/index.html
+++ b/recommendation/templates/recommendation/index.html
@@ -1,9 +1,9 @@
 {% extends 'dashboard/index.html' %}
 
 {% block all_recommendations %}
-
+   is {{ user_type }}
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+{#    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">#}
     <link rel="stylesheet" type="text/css" href="{% static 'recommendation/css/recommendation.css' %}">
 
     <div class="all-app-root">
