--- a/recommendation/templates/recommendation/recommendation_form.html
+++ b/recommendation/templates/recommendation/recommendation_form.html
@@ -1,8 +1,7 @@
 {% extends 'recommendation/index.html' %}
 {% block recommend_form %}
-
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+{#<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">#}
 <link rel="stylesheet" type="text/css" href="{% static 'recommendation/css/recommendation.css' %}">
 
 <div style="margin-left:20%;height: 90%; margin-bottom: 5%; width:50%; margin-top: 2%;">
