theme integration fixes across apps

--- a/admissions/templates/admissions/index.html
+++ b/admissions/templates/admissions/index.html
@@ -9,7 +9,7 @@
                 <div class="dropdown" style="text-align: right; line-height: 2.5;"><b>Filter
                     by
                     Program:</b>
-                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button"
+                    <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button"
                        id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
                        aria-expanded="false"
                        style="float: right; margin-right: 2em; margin-left: 1em">
