--- a/high_school/templates/high_school/school_overview.html
+++ b/high_school/templates/high_school/school_overview.html
@@ -9,7 +9,7 @@
                 <h6 class="mb-2">{{ selected_school.total_students }} students</h6>
                 {% if selected_school.graduation_rate != 'N/A' %}
                     <h6 class="mb-3">
-                        <span style="font-size: 14px; padding: 4px;">
+                        <span style="font-size: 14px;">
                             <i class="fa fa-graduation-cap mr-2"></i>
                         </span>
                         {% widthratio selected_school.graduation_rate 1 100 %} %</h6>
@@ -27,7 +27,7 @@
                     </div>
                     <span style="width: 30%; text-align: right;
                     vertical-align: middle; font-size: 16px;">
-                                    <i class="fa fa-clock-o"></i>
+                                    <i class="fa fa-clock-o mr-2"></i>
                          {{ selected_school.start_time }} - {{ selected_school.end_time }}</span>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                                href="#program_collapse" role="button"
                                aria-expanded="false"
                                aria-controls="program_collapse">
-                            <span class="ml-5" style="font-size: 18px;">
+                            <span class="ml-5 text-light" style="font-size: 18px;">
                                 <i id="program_toggle_icon" class="fa fa-plus-circle">
                                 </i>
                             </span>
