--- a/recommendation/templates/recommendation/recommendation_rating.html
+++ b/recommendation/templates/recommendation/recommendation_rating.html
@@ -1,7 +1,7 @@
 
 {% load static %}
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-<link href="{% static 'css/theme.css' %}" rel="stylesheet">
+<link href="{% static 'css/student_theme.min.css' %}" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{% static 'recommendation/css/recommendation.css' %}">
 <!-- Load bootstrap css, jquery, bootstrap js -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
