dropdown z-index fix

--- a/high_school/templates/high_school/school_list.html
+++ b/high_school/templates/high_school/school_list.html
@@ -152,7 +152,7 @@
                     {% else %}
                         <h6 class="mb-0">Graduation rate unavailable</h6>
                     {% endif %}
-                    <h6 class="mb-0">{{ school.phone_number }}</h6>
+                    <h6 class="mb-0">{{ school.phone_number }} <i class="fa fa-phone ml-2 hide"></i></h6>
                 </div>
                 </a>
                 {% endfor %}
