--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -41,7 +41,7 @@
                           aria-expanded="false" style="cursor: pointer;">
                        <i class="fa fa-gear ml-2"></i>
                     </span>
-                    <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="dropdown03" style="z-index: 2000;">
+                    <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="dropdown03" style="z-index: 2000; min-width: 11rem;">
                         <button class="dropdown-item">Change Password</button>
                         <a class="dropdown-item" href="{% url 'dashboard:logout' %}">Logout</a>
                     </div>
