--- a/logIn/templates/logIn/index.html
+++ b/logIn/templates/logIn/index.html
@@ -1,12 +1,10 @@
-{#Todo: remove these comment post successful integration of application#}
-{#{% extends 'dashboard/index.html' %}#}
-{#{% block testing %}#}
-{# extend dashboard/index.html in your application app#}
-{# declare a block and enclose the entire file inside that block, including your scripts#}
-{# block name should be the same as declared in dashboard/index.html (check for more)#}
-{# remove comment from eof also - below #}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+{% if user_type and user_type == constant_ut_adminStaff %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/admin_theme.min.css' %}">
+{% else %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/student_theme.min.css' %}">
+{% endif %}
 <link rel="stylesheet" type="text/css" href="{% static 'logIn/css/login.css' %}">
 
 <body>
@@ -42,16 +40,16 @@
                 <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login"/>
             </form>
         </div>
-        <div class="col-md-4 right-pane">
-            <div class="blur-bg"></div>
+        <div class="col-md-4 right-pane overlay">
+{#            <div class="blur-bg"></div>#}
             <div class="text-center mb-4 right-pane-container">
-                <h1 class="h3 font-weight-normal" style="margin-bottom: 20px;">New here?</h1>
+                <h3 class="font-weight-normal mb-4">New here?</h3>
                 {% if user_type == constant_ut_student %}
-                    <h4 class="h5 font-weight-light" style="text-align: justify;margin: 40px 10px 20px 10px;">If you're a high school kid (or a concerned guardian) starting your application process for the upcoming High School admission window and do not want the hassle of a big-yellow-book ...start with OneApply.</h4>
-                    <h4 class="h5 font-weight-light" style="text-align: justify;margin: 40px 10px 40px 10px;">OneApply is a one stop application portal which provides you with cool features like - sorting your high schools by boroughs, by their programs, their locations, adding them to the cart, one-click apply and more.</h4>
+                    <span class="font-weight-light" style="text-align: left;margin: 20px 10px;">If you're a high school kid (or a concerned guardian) starting your application process for the upcoming High School admission window and do not want the hassle of a big-yellow-book ...start with OneApply.</span>
+                    <span class="font-weight-light" style="text-align: left;margin: 20px 10px;">OneApply is a one stop application portal which provides you with cool features like - sorting your high schools by boroughs, by their programs, their locations, adding them to your favorites, one-click apply and more.</span>
                 {% elif user_type == constant_ut_adminStaff  %}
-                    <h4 class="h5 font-weight-light" style="text-align: justify;margin: 40px 10px 20px 10px;">If you're in charge (or an employee of) of your High School's admission department and want to avoid assessing the 1000s of applications manually... start with OneApply.</h4>
-                    <h4 class="h5 font-weight-light" style="text-align: justify;margin: 40px 10px 40px 10px;">OneApply is a one stop application portal which provides you with cool features like - a central access location for all the electronically received applications, sorting through the applications based on various programs, student's current school, their grades, adding them to the accepted-cart and rejected-cart, one-click notifications to students and more.</h4>
+                    <span class="font-weight-light" style="text-align: left;margin: 20px 10px;">If you're in charge (or an employee of) of your High School's admission department and want to avoid assessing the 1000s of applications manually... start with OneApply.</span>
+                    <span class="font-weight-light" style="text-align: left;margin: 20px 10px;">OneApply is a one stop application portal which provides you with cool features like - a central access location for all the electronically received applications, sorting through the applications based on various programs, student's current school, their grades, accepting and rejecting applications, one-click notifications to students and more.</span>
                 {% endif %}
                 <a href="{% url 'register:register_user' user_type %}"><button class="btn btn-outline-light mt-3">Create account</button></a>
 {#                <button class="btn btn-outline-light mt-3" onclick="location.href={% url 'register:register_user' user_type %}">Your account</button>#}
@@ -62,5 +60,3 @@
 </div>
 
 </body>
-{#{% endblock %}#}
-{#todo: remove this post successful integration of applications app#}
