--- a/admissions/templates/admissions/detail.html
+++ b/admissions/templates/admissions/detail.html
@@ -42,7 +42,11 @@ inherit; width: 75%; margin: 0 auto 2em;">
                         </tr>
                         <tr>
                             <th scope="row">Gender</th>
-                            <td>{{ application.gender }}</td>
+                            {% if application.gender.lower == "f" %}
+                                <td>Female</td>
+                            {% else %}
+                                <td>Male</td>
+                            {% endif %}
                         </tr>
                         <tr>
                             <th scope="row">Date of Birth</th>
