--- a/high_school/templates/high_school/index.html
+++ b/high_school/templates/high_school/index.html
@@ -171,6 +171,9 @@
                     }
                 },
                 error: function (data) {
+                  if (data.status === 403) {
+                        window.location.href = "{% url 'dashboard:logout' %}";
+                    }
                 }
             });
         });
